Added: enemy spawner, player stats(gold and lives), trigger of the end of the level and game over screen

--- a/Tower-Defence.CSharp.csproj
+++ b/Tower-Defence.CSharp.csproj
@@ -89,7 +89,11 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\BulletBehavior.cs" />
     <Compile Include="Assets\Scripts\BulletSpawn.cs" />
+    <Compile Include="Assets\Scripts\EnemySpawnScript.cs" />
+    <Compile Include="Assets\Scripts\FinishScript.cs" />
     <Compile Include="Assets\Scripts\PigMove.cs" />
+    <Compile Include="Assets\Scripts\PlayerStats.cs" />
+    <Compile Include="Assets\Scripts\TriggerHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
