--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,8 @@
      <Compile Include="Assets\Scripts\FinishScript.cs" />
      <Compile Include="Assets\Scripts\MenuScripts\Exit.cs" />
      <Compile Include="Assets\Scripts\MenuScripts\LevelStart.cs" />
+     <Compile Include="Assets\Scripts\MenuScripts\PauseGame.cs" />
+     <Compile Include="Assets\Scripts\MenuScripts\ReturnToMainMenu.cs" />
      <Compile Include="Assets\Scripts\PigMove.cs" />
      <Compile Include="Assets\Scripts\PlayerStats.cs" />
      <Compile Include="Assets\Scripts\TriggerHelper.cs" />
