--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,7 +47,9 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\Game\EnemySpawnScript.cs" />
      <Compile Include="Assets\Scripts\Game\FinishScript.cs" />
+     <Compile Include="Assets\Scripts\Game\Mobs.cs" />
      <Compile Include="Assets\Scripts\Game\PlayerStats.cs" />
+     <Compile Include="Assets\Scripts\Game\SpawnStats.cs" />
      <Compile Include="Assets\Scripts\Game\TowerCreator.cs" />
      <Compile Include="Assets\Scripts\Game\TowerSwitcher.cs" />
      <Compile Include="Assets\Scripts\Game\TriggerHelper.cs" />
@@ -55,9 +57,11 @@
      <Compile Include="Assets\Scripts\MenuScripts\LevelStart.cs" />
      <Compile Include="Assets\Scripts\MenuScripts\PauseGame.cs" />
      <Compile Include="Assets\Scripts\MenuScripts\ReturnToMainMenu.cs" />
+     <Compile Include="Assets\Scripts\Mobs\MobAI.cs" />
      <Compile Include="Assets\Scripts\Mobs\PigMove.cs" />
      <Compile Include="Assets\Scripts\bullets\BulletBehavior.cs" />
      <Compile Include="Assets\Scripts\bullets\BulletSpawn.cs" />
+     <Compile Include="Assets\Scripts\tower\TowerAI.cs" />
      <Compile Include="Assets\Scripts\tower\TowerLifeLoop.cs" />
      <None Include="Assets\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
      <None Include="Assets\Standard Assets\Effects\ImageEffects\Shaders\_BloomAndFlares\BlendOneOne.shader" />
